added new gradient to header

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ a:active {
 .wildlife-header {
   padding-top: 170px;
   height: 850px;
-  background: linear-gradient(#ffa949, transparent 90%),
+  background: linear-gradient(#99c2ff, transparent 90%),
               linear-gradient(0deg, #fff, transparent),
               #ffa949 url('../img/mountains.jpg') no-repeat center;
   background-size: cover;
@@ -133,7 +133,8 @@ a:active {
 
 .primary-content,
 .main-header,
-.main-footer {
+.main-footer,
+.wildlife-header {
   text-align: center;
 }
 
