--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,42 @@ a:active {
   background-size: cover;
   box-shadow: inset 0 0 50px 10px rgba(0,0,0, 1);
   border-radius: 10px;
+}
 
+.wildlife-mink {
+  color: white;
+  text-align: left;
+  padding: 21% 30%;
+  border-top: 10px solid #99c2ff;
+  margin: 105px 0 60px;
+  background: #434a52 url('../img/mink.jpg') no-repeat center;
+  background-size: cover;
+  box-shadow: inset 0 0 50px 10px rgba(0,0,0, 1);
+  border-radius: 10px;
+}
+
+.wildlife-bears {
+  color: white;
+  text-align: left;
+  padding: 18% 24%;
+  border-top: 10px solid #99c2ff;
+  margin: 105px 0 60px;
+  background: #434a52 url('../img/bear.jpg') no-repeat center;
+  background-size: cover;
+  box-shadow: inset 0 0 50px 10px rgba(0,0,0, 1);
+  border-radius: 10px;
+}
+
+.wildlife-baldeagles {
+  color: white;
+  text-align: left;
+  padding: 18% 24%;
+  border-top: 10px solid #99c2ff;
+  margin: 105px 0 60px;
+  background: #434a52 url('../img/baldeagle.jpg') no-repeat center;
+  background-size: cover;
+  box-shadow: inset 0 0 50px 10px rgba(0,0,0, 1);
+  border-radius: 10px;
 }
 
 .arrow {
